kubernetes/subscribie-k8s-onboarding-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: subscribie-deployment
  labels:
    subscribie: onboarding
    subscribie: deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      subscribie: onboarding # match pods witch this label
  template:
    metadata:
      labels:
        app: subscribie
        subscribie: onboarding
    spec:
      containers:
      - name: subscribie
        image: subscribie/subscribie:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 9090
        volumeMounts:
          - mountPath: '/subscribie/volume'
            name: subscribie-volume
      volumes:
        - name: subscribie-volume
          persistentVolumeClaim:
            claimName: subscribie-onboarding-volume
