kubernetes/subscribie-k8s-pod.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: subscribie-onboarding
  labels:
    app: subscribie
    subscribie: onboarding
spec:
  containers:
  - name: subscribie
    image: subscribie/subscribie:latest
    imagePullPolicy: Always
